[package]
name = "wasm-dom-canvas-checkcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = { version = "0.10.0", default-features = false, features = ["console", "utils"] }
web-sys = {version = "0.3.66", default-features = false, features = [
    "CustomEvent",
    "CustomEventInit",
    "Event",
]}
yew = "0.21.0"